# cjm-transcription-plugin-whisper

./: .gitignore  README.md  capability.html  capability.html.md  cjm.yaml  environment.yml  index.html  index.html.md  meta.html  meta.html.md  plugin.html  plugin.html.md  plugins_test.yaml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_capability_whisper/: _modidx.py  capability.py
cjm_transcription_plugin_whisper/: _modidx.py  meta.py  plugin.py
examples/: test_integration.ipynb
nbs/: capability.ipynb  index.ipynb  meta.ipynb  nbdev.yml  plugin.ipynb
tests_manual/: __init__.py  test_reconfigure.md  test_reconfigure.py  validate_whisper_e2e.md  validate_whisper_e2e.py
