[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-capability-whisper"
dynamic = ["version"]
description = "An OpenAI Whisper speech-to-text capability for the cjm-substrate runtime that provides local transcription with configurable model selection and parameter control."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastcore', 'pandas', 'cjm-substrate>=0.0.51', 'cjm-capability-primitives>=0.0.10', 'openai-whisper', 'torch', 'numpy', 'soundfile', 'cjm-substrate-torch-utils>=0.0.12']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-capability-whisper"
Documentation = "https://cj-mills.github.io/cjm-capability-whisper"

[project.entry-points.nbdev]
cjm_capability_whisper = "cjm_capability_whisper._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_capability_whisper.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_capability_whisper*"]

[tool.nbdev]
